--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,69 @@
 .login{
 	margin-left:20px;
 }
+
+.header-container{
+	color: #5955DA;
+	background-color: #D6E9FE;
+	display:flex;
+	justify-content:center;
+}
+
+.header{
+	width:900px;
+	height: 300px;
+	display: flex;
+	justify-content:space-between;
+	align-items: center;	/* stretch is important  if entire height of parent container is to be covered */
+}
+
+.subscribe,
+.social
+{
+	align-self:flex-end;
+	margin-bottom:20px;
+}
+
+.photo-grid-container{
+	display: flex;
+	justify-content: center;
+}
+
+.photo-grid{
+	width:900px;
+	display:flex;
+	justify-content:center;
+	flex-direction:row; 
+	align-items: center;
+	flex-wrap:wrap;
+}
+
+.photo-grid-item{
+	border: 1px solid #fff;
+	width: 300px;
+	height: 300px;
+}
+
+.first-item{
+	 /*order: 1;*/
+}
+
+.last-item{
+	/*order: -1;*/
+}
+
+.footer{
+	display:flex;
+	justify-content:space-between;
+}
+.footer-item{
+	border: 1px solid #fff;
+	background-color: #D6E9FE;
+	height: 200px;
+	flex:1;
+}
+.footer-three,.footer-one{
+	flex:initial;
+	width:300px;
+	background-color: #5995DA;
+}
